# AgentHub-Starter

./: .dockerignore  .env.example  .gitignore  AGUI_SLIDEDECK_NOTES.md  CLAUDE.md  Claude-by-Anthropic-for-PowerPoint.pptx  Dockerfile  MIGRATION_TO_CREATE_AGENT.md  PLAN.md  PLAN_HITL_LANGGRAPH.md  PROGRESS.md  Presentation2.pptx  README.md  Row Access Policy.md  SQL Firewall.md  SQL Firewall.pptx  docker-compose.ecs-local.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  request context.md  requests.http  tsconfig.json  ~$Claude-by-Anthropic-for-PowerPoint.pptx
.github/workflows/: ci.yml
agent/: .dockerignore  Dockerfile  mcp_demo_server.py  mcp_http_server.py  mcp_servers.json.example  pyproject.toml
agent/agent/: __init__.py  bedrock.py  events.py  graph.py  logging_config.py  main.py  mcp_client.py  skills_loader.py  widgets.py
agent/agent/tasks/: __init__.py  models.py  runner.py  store.py
agent/agent/tools/: __init__.py  aws_tools.py  skills_tools.py  widget_tools.py
agent/skills/aws-cost-analysis/: SKILL.md
agent/skills/cloudwatch-query-builder/: SKILL.md
agent/skills/incident-response/: SKILL.md
app/: globals.css  layout.tsx
app/(app)/: layout.tsx
docs/: README.md  architecture.md  backend.md  checkin.md  configuration.md  deployment.md  development.md  frontend.md  getting-started.md  mcp-servers.md  scheduled-tasks.md  skills.md  sqlskill.md  tools.md  troubleshooting.md  widgets.md
infra/ecs/: README.md  (+1 more)
lib/: agent-reducer.ts  tasks-types.ts  types.ts  use-agent.ts  widgets.ts
(+18 files in other folders)
